--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png" />
+    <title>Generator Daftar Pembayaran</title>
+    <meta
+      name="description"
+      content="Aplikasi untuk Menghasilkan Dokumen Daftar Pembayaran"
+    />
+    <meta name="theme-color" content="#97266D" />
   </head>
   <body>
     <div id="root"></div>
